--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ align-items: center;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 2em;
+    font-size: .4em;
     box-shadow: 0px 0px 20px 10px white;
 
 }
@@ -46,15 +46,15 @@ align-items: center;
     border: 1px solidblack;
     width: 30vw;
     height: 40vh;
-    background-image: url("/images/space_hero.gif");
+    background-image: url("images/space_hero.gif");
     background-size: cover ;
     background-position: center;
     background-repeat: no-repeat;
     box-shadow: 0px 0px 20px 10px white;
-    
-
-    
 }
+
+
+
 .playerStats{
     display: flex;
     justify-content: center;
@@ -63,7 +63,7 @@ align-items: center;
     width: 15vw;
     height: 15vh;
     text-align: center;
-    font-size: 1.5em;
+    font-size: 5px;
     box-shadow: 0px 0px 20px 10px white;
     border-radius: 2%;
 
@@ -72,15 +72,15 @@ align-items: center;
 .enemyImage{
     border: 1px solidblack;
     width: 30vw;
-    height: 35vh;
-    background-image: url("/images/enemy.gif");
+    height: 40vh;
+    background-image: url("images/enemy.gif");
     background-size: cover ;
     background-position: center;
     background-repeat: no-repeat;
     box-shadow: 0px 0px 20px 10px white;
-    
-
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .enemyStats{
     display: flex;
@@ -91,7 +91,7 @@ align-items: center;
     height: 15vh;
     text-align: center;
     font-family: 'Share Tech Mono', monospace;
-    font-size: 1.5em;
+    font-size: 5px;
     box-shadow: 0px 0px 20px 10px white;
 
 }
