--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+@keyframes blink { 
+    50% { border-color: #ff0000; } 
+ }
+
+ @keyframes win { 
+    50% { border-color: green; } 
+ }
+
+
+
 .bodyContainer{
     display: flex;
     justify-content: space-between;
@@ -16,7 +26,7 @@
 
 .mainCharacterView{
 
-width: 30%;
+width: 50%;
 display: flex;
 flex-direction: column;
 justify-content: space-around;
@@ -73,7 +83,7 @@ align-items: center;
 
 }
 .playerImage{
-    border: 1px solidblack;
+    border: 1px solid black;
     width: 30vw;
     height: 40vh;
     background-image: url("images/space_hero.gif");
@@ -82,6 +92,8 @@ align-items: center;
     background-repeat: no-repeat;
     box-shadow: 0px 0px 20px 10px white;
 }
+
+
 
 
 
@@ -100,7 +112,7 @@ align-items: center;
 
 }
 .enemyImage{
-    border: 1px solidblack;
+    border: 1px solid black;
     width: 30vw;
     height: 40vh;
     background-image: url("images/enemy.gif");
@@ -111,6 +123,8 @@ align-items: center;
     display: flex;
     justify-content: center;
     align-items: center;
+    
+
 }
 .enemyStats{
     display: flex;
