--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 @keyframes blink { 
-    50% { border-color: #ff0000; } 
+    50% { border-color: #ff0000;
+        box-shadow: 0px 0px 20px 10px #ff0000; } 
  }
 
  @keyframes win { 
-    50% { border-color: green; } 
+    50% { border-color: green; 
+        box-shadow: 0px 0px 20px 10px green;} 
  }
 
 
